--- a/src/pages/_partials/_steps/_add-build-id.mdx
+++ b/src/pages/_partials/_steps/_add-build-id.mdx
@@ -11,7 +11,7 @@ below based on your toolchain setup.
    "FLASH" below will match the name of the MEMORY section read-only data and
    text is placed in.
 
-```
+```linker-script
     .note.gnu.build-id :
     {
         __start_gnu_build_id_start = .;
@@ -29,26 +29,6 @@ Be sure to update `\<YOUR_FLASH_SECTION\>` to match the name of the section
 The `.note.gnu.build-id` output section name is used to locate the build id when
 the symbol file is uploaded. The `__start_gnu_build_id_start` identifier is used
 at compile time by the SDK for populating the build id.
-
-</details>
-
-<details>
-  <summary>IAR EWARM Python Script Run on ELF in Post-Build Action</summary>
-
-1. install python (eg python3.9 from the Microsoft app store)
-2. install the `pyelftools` python package by:
-
-   1. open git bash or cmd.exe
-   2. `python3.9.exe -m pip install pyelftools==0.27`
-
-3. then add the appropriate post-build action, for example:
-
-   ```bash
-   # double check the path to the `fw_build_id.py` script
-   python3.9.exe $PROJ_DIR$/third-party/memfault-firmware-sdk/scripts/fw_build_id.py $TARGET_PATH$`
-   ```
-
-   [![/img/docs/mcu/iar-post-build-id.png](/img/docs/mcu/iar-post-build-id.png)](/img/docs/mcu/iar-post-build-id.png)
 
 </details>
 
@@ -73,5 +53,25 @@ The script depends on `pyelftools` so make sure you have run
 `pip install pyelftools` or added to your `requirements.txt`
 
 :::
+
+</details>
+
+<details>
+  <summary>IAR EWARM Python Script Run on ELF in Post-Build Action</summary>
+
+1. install python (eg python3.9 from the Microsoft app store)
+2. install the `pyelftools` python package by:
+
+   1. open git bash or cmd.exe
+   2. `python3.9.exe -m pip install pyelftools==0.27`
+
+3. then add the appropriate post-build action, for example:
+
+   ```bash
+   # double check the path to the `fw_build_id.py` script
+   python3.9.exe $PROJ_DIR$/third-party/memfault-firmware-sdk/scripts/fw_build_id.py $TARGET_PATH$`
+   ```
+
+   [![/img/docs/mcu/iar-post-build-id.png](/img/docs/mcu/iar-post-build-id.png)](/img/docs/mcu/iar-post-build-id.png)
 
 </details>
