--- a/docs/platform/fleet-sampling.mdx
+++ b/docs/platform/fleet-sampling.mdx
@@ -82,6 +82,11 @@ an immediate configuration update can be requested after changing the fleet
 sampling configuration, instead of waiting for the next regular time the device
 is going to poll its configuration.
 
+Bort will report metrics showing the current fleet sampling configuration on
+each device. See
+[Built-in Metrics](/docs/android/android-builtin-metrics#fleet-sampling-aspect-metrics)
+for more information.
+
 ## Quotas
 
 Quota and usage information can be accessed under
