Legacy uploads deprecated/removed (#449)

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -478,7 +478,7 @@ There are two modes in which the Bort app can be configured to send data. The
 first is by bundling all data into a
 [MAR (Memfault Archive) file](/docs/android/uploading-android-diagnostics#uploading-a-mar-file),
 or by sending each piece of data individually to Memfault as it's collected from
-the system.
+the system (deprecated - see below).
 
 :::note
 
@@ -506,7 +506,8 @@ The use of MAR files is _required_ to use Memfault's _Fleet Sampling_ feature.
 
 :::info
 
-This method of uploading files from the Bort SDK is deprecated as of Bort 4.1
+This method of uploading files from the Bort SDK is deprecated as of Bort 4.1,
+and will be completely removed in Bort 4.6.0.
 
 :::
 
